# ChangeLog for media-sound/aeolus
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/aeolus/ChangeLog,v 1.6 2009/08/04 08:04:48 aballier Exp $

*aeolus-0.8.2 (04 Aug 2009)

  04 Aug 2009; Alexis Ballier <aballier@gentoo.org> +aeolus-0.8.2.ebuild:
  version bump

  25 Jan 2009; Markus Meier <maekke@gentoo.org> aeolus-0.8.1.ebuild:
  amd64/x86 stable, bug #256042

  24 Jul 2008; Raúl Porcel <armin76@gentoo.org> aeolus-0.8.1.ebuild:
  Add ~x86 wrt #232871

  29 Apr 2008; Alexis Ballier <aballier@gentoo.org> -aeolus-0.6.6.2.ebuild:
  remove old

*aeolus-0.8.1 (19 Apr 2008)

  19 Apr 2008; Alexis Ballier <aballier@gentoo.org> +aeolus-0.8.1.ebuild:
  version bump

*aeolus-0.6.6.2 (27 Jan 2008)

  27 Jan 2008; Alexis Ballier <aballier@gentoo.org> +metadata.xml,
  +aeolus-0.6.6.2.ebuild:
  Initial import, greatly based on the ebuild by Dominique Michel
  <dominique.michel@citycable.ch>, bug #128966
