@@ -3,14 +3,16 @@ Hash: SHA1
 
 DIST aeolus-0.8.1.tar.bz2 59676 RMD160 a5c3ffd18137eb5310f3e8b5394dc23999b17d77 SHA1 99d48f8372311f6952b74d1ae94d5f17e2184c4a SHA256 33cd33a3aad11123fa433ebd37fc8a5c13640d6ea059d3f1bf4f05c0f353c37f
 DIST aeolus-0.8.2.tar.bz2 64184 RMD160 5eaa3e92d24ed0551f2857064c450ab0a121332e SHA1 0e07947e958f52e4bf604277dc2f90a275551208 SHA256 1d3f91c0bf43e93f3345c3ce8d223a4b983cede2f6c915299fb6aa8783a47320
+DIST aeolus-0.8.4.tar.bz2 64562 RMD160 7ba54bc1b62b3ebd68ab41789e475a256be85436 SHA1 44d51a38d301f3cb570e2090979ddb62108cdc4f SHA256 59a88976e1f46dfa73d38fe209bd55b17f4c44e62a91797b84be45c6ba1654ea
 EBUILD aeolus-0.8.1.ebuild 1432 RMD160 1d064171703bf302cd660147bbff81eac4cb6635 SHA1 8d88273f9f3d243760d5f45379934cf891942eab SHA256 cd547889a962928ff69079b1fcf2f3973a1d5f0f0832cf9cb5b0687488337428
 EBUILD aeolus-0.8.2.ebuild 1436 RMD160 deecda325f4246235bfc7c91f1bac34dbca914f3 SHA1 a3d006d476b9e3ebcac5f7e7cdfd2bf1550da860 SHA256 54e082497884341741519136a398bde9200654003ecad62fd42661918ed8c843
-MISC ChangeLog 973 RMD160 cb21807d0a17cd21813e39719827d93c7722a7fa SHA1 c4d0f577b8c597e22f1fa4f8e13f532c11a7c907 SHA256 12329af6f7037c78bbbda467cd2cb1b20174ed2963c7c60062e0646eeacaff3d
+EBUILD aeolus-0.8.4.ebuild 1433 RMD160 daf3f7d0bd81d417f205d5e46e08f45a0a019442 SHA1 2c6cfce548d3912d7e89e6e86e8e385d03f9f977 SHA256 674d6d8ab4c76ca0f8b1cd542aecfae43f28236fb66888380d666537bcea6f12
+MISC ChangeLog 1149 RMD160 ac947ab13c5d7aace5014fc2fd993cc81fb7a32f SHA1 ff2209bc476e33f8bc8ffb76c69f3ccb646a8690 SHA256 d7ee3c979b43c357d892f1a3b43ad8999e712d0c12a11ed241852e25d4958d72
 MISC metadata.xml 732 RMD160 597bfd85e3e917fd8742d627c589712a07e9e865 SHA1 3c2f2f762062881cbefd9945ea97713d5252b7e7 SHA256 53da8362ea798a6da25583397184973a85203785ade23135ea9b91dd0660bfcd
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkp366cACgkQvFcC4BYPU0pNYgCgohh97AwbC1dQorH4nsjUbp3v
-lYsAniZaKL+UuXsOQ7SDREmUkH14iptL
-=zz+x
+iEYEARECAAYFAkvC4nUACgkQvFcC4BYPU0pItwCgmL4hhN43l2gHUva8JUsJULd5
+KUwAoJN+ma725P9lhygcVgPmLtVhAWaz
+=y61T
 -----END PGP SIGNATURE-----
